--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
+    "express": "^4.21.2",
     "mongoose": "^8.10.1",
+    "node-cron": "^3.0.3",
     "puppeteer": "^24.2.1"
   }
 }
