--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -3,7 +3,7 @@ name: Run Node Script Every 15 Minutes
 on:
   schedule:
     - cron: "*/15 * * * *" # Runs every 15 minutes
-
+  workflow_dispatch:
 jobs:
   run-script:
     runs-on: ubuntu-latest
