--- a/.github/workflows/corrigendum_schedule.yml
+++ b/.github/workflows/corrigendum_schedule.yml
@@ -1,8 +1,8 @@
-name: Run Tender Script Every 15 Minutes
+name: Run Corrigendum Script Every 15 Minutes
 
 on:
   schedule:
-    - cron: "*/15 * * * *" # Runs every 15 minutes
+    - cron: "*/30 * * * *" # Runs every 30 minutes
   workflow_dispatch:
 jobs:
   run-script:
@@ -17,4 +17,4 @@ jobs:
       - name: Install Dependencies
         run: npm install
       - name: Run Script
-        run: node script.js
+        run: node corrigendumsScript.js
